--- a/.dockerignore
+++ b/.dockerignore
@@ -1,20 +1,17 @@
-# Git
-.git
-.gitignore
+# Dependencies
+node_modules
 
-# Docker
+# Next.js build folder
+.next
+
+# Local environment files
+.env.local
+
+# Docker files
 Dockerfile
 .dockerignore
 
-# Node
-node_modules
-npm-debug.log
-
-# Next.js
-.next
-
-# Local environment variables
-.env.local
-
-# VSCode
-.vscode
+# Misc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
