--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -2,5 +2,5 @@
   "appName": "InspaiărBet",
   "slogan": "Pariază cu inspirație",
   "pactControlEnabled": true,
-  "aiVoiceEnabled": false
+  "aiVoiceEnabled": true
 }
